# greiner-portal

./: .cursorrules  .env  .env.example  .gitignore  .ssh-setup-complete  CLAUDE.md  CLEANUP_COMMANDS_TAG71.sh  CONFIGURATION_CHECKLIST.md  EAUTOSELLER_API_ANALYSE.md  EAUTOSELLER_BROWSER_ANALYSE_ANLEITUNG.md  FEATURE_TEST_CHECKLIST.md  GIT_WORKFLOW.md  HARDCODED_VALUES_REFERENCE.md  INSTALLATION_ANLEITUNG.md  L394PR-ALTERNATIVKONTEN-OPEL-01-001.csv  PROJECT_STATUS.md  PROJEKT_STRUKTUR.md  QUICK_START_NEW_CHAT.md  README.md  README_FOR_CLAUDE.md  README_SESSION_START.md  SERVER_STATUS.txt  SESSION_WRAP_UP_TAG2.md  SESSION_WRAP_UP_TAG31_FINAL.md  SESSION_WRAP_UP_TAG32.md  SESSION_WRAP_UP_TAG57.md  SESSION_WRAP_UP_TAG58.md  SESSION_WRAP_UP_TAG6.md  SESSION_WRAP_UP_TAG72.md  SESSION_WRAP_UP_TAG89.md  TODO_FOR_CLAUDE_SESSION_START_TAG73.md  TODO_FOR_CLAUDE_SESSION_START_TAG90.md  WORKFLOW.md  abteilungsleiter_formular.html  abteilungsleiter_planung_data.py  abteilungsleiter_uebersicht.html  analyze_employees.py  analyze_locosoft_absence.py  analyze_real_employees.py  analyze_subsidiaries.py  (+68 more)
.claude/: COMMANDS.md  settings.json  settings.local.json
DA_Screenshots/: 20251202_105752_01_startseite.html  20251202_105752_navigation.json  20251202_110143_03_nach_login.html  20251202_110400_03_nach_login.html  20251202_110617_exploration.json
analysis/: ANLEITUNG_DUPLIKATE_ANALYSE.md  api_korrektur_interne_transfers.sql  bereinige_duplikate.sql  duplikate_analyse.sql  run_duplikate_analyse.sh
api/: PATCH_TAG101_stempeluhr.py  PATCH_TAG101_stempeluhr_v2.py  __init__.py  afa_api.py  (+114 more)
(+2709 files in other folders)
